Fix Netlify React routing